# high-level-enhancements-for-aws-in-cpp

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  vcpkg.json  version.h.in
cmake/: dependencies.cmake  project_version.cmake
doc/: README.md
doc/examples/: CMakeLists.txt  central_limit_theorem.cpp  exp_mean.cpp  exp_mean.h  lambda_add_example.cpp  lambda_rr_cloud_main.cpp
doc/examples/s3stream/: CMakeLists.txt  read_object.cpp  write_object.cpp
feature_rfc/: README.md
include/awslabs/enhanced/: Aws.h  aws_lambda.h  is3stream.h  lambda_client.h  os3stream.h  s3buf.h  s3stream.h
include/awslabs/enhanced/detail/: lambda_detail.h
packaging/: CMakeLists.txt
temp/: CMakeLists.txt
test/: CMakeLists.txt  redeploy_lambda.cmake  test_helpers.h  test_is3stream.cpp  test_lambda_add.cpp  test_lambda_add_fn.cpp  test_os3stream.cpp  test_s3buf.cpp
tools/: cli_deploy_cpp_lambda.sh  deploy_cpp_lambda_fn.sh  lambda_cfn_deploy.yaml-template
